--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Accessible Portfolio</h1>
+	<img src="https://www.bing.com/images/search?view=detailV2&ccid=uHaqRdiM&id=06CDB8CCAC621BA0846B45913F076EB6EEFFC046&thid=OIP.uHaqRdiMzWSMCR2LzsmhtQHaEZ&mediaurl=https%3a%2f%2fimages.pexels.com%2fphotos%2f1188083%2fpexels-photo-1188083.png%3fcs%3dsrgb%26dl%3dsea-dawn-nature-1188083.jpg%26fm%3djpg&exph=3389&expw=5698&q=images&simid=608048034472147073&FORM=IRPRST&ck=738777525C1D13FF67740BAA9D3D6C5F&selectedIndex=0&itb=0&idpp=overlayview&ajaxhist=0&ajaxserp=0" alt="Demo Text"/>
+	<nav role="navigation" aria-label="Main Navigation">
+		<ul role="list">
+			<li role="listitem"><a href="#about">About</a>
+			<li role="listitem"><a href="#projects">Projects</a>
+			<li role="listitem"><a href="#contact">Contact</a>
+		</ul>
+	</nav>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
